@@ -507,6 +507,9 @@ Other Changes
 * SOLR-6861: post.sh from exampledocs directory has been removed as there no longer is a default update
   URL. (Anshum Gupta)
 
+* SOLR-5922: Add support for adding core properties to SolrJ Collection Admin Request calls.
+  (Varun Thacker via Anshum Gupta).
+
 ==================  4.10.3 ==================
 
 Bug Fixes
